Bug 68056 - Fails to compile czech(qwerty) keyboard
Summary: Fails to compile czech(qwerty) keyboard
Status: RESOLVED FIXED
Alias: None
Product: libxkbcommon
Classification: Unclassified
Component: General (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Daniel Stone
QA Contact: Ran Benita
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-13 11:24 UTC by Gatis Paeglis
Modified: 2013-08-13 12:12 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Gatis Paeglis 2013-08-13 11:24:37 UTC
sudo ./test/interactive -r evdev -m pc105 -l cz -v qwerty
xkbcommon: ERROR: cz:75:19: illegal escape sequence in string literal
xkbcommon: ERROR: cz:75:19: syntax error
xkbcommon: ERROR: Couldn't process include statement for 'cz(qwerty)'
xkbcommon: ERROR: Abandoning symbols file "(unnamed)"
xkbcommon: ERROR: Failed to compile xkb_symbols
xkbcommon: ERROR: Failed to compile keymap
Failed to compile RMLVO: 'evdev', 'pc105', 'cz', 'qwerty', '(null)'

[1] https://bugreports.qt-project.org/browse/QTCREATORBUG-9978
Comment 1 Ran Benita 2013-08-13 11:57:11 UTC
Commit 7caa1af25e6b656af7c52957e5caee7571c4e792 should fix this.
Mind doing a quick confirmation just in case?
Comment 2 Gatis Paeglis 2013-08-13 12:05:29 UTC
Just verified, no more errors and input works. Thanks.
Comment 3 Ran Benita 2013-08-13 12:12:02 UTC
Thank for reporting and confirming, as usual...

I might try going through all xkeyboard-config files and compile them, just to see they all work fine. But, I think the scanner doesn't have any "strictness errors" like these anymore (at least not ones that xkbcomp doesn't have itself).


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.